Fixed issue where user dropdown would not toggle on smaller screens

--- a/public/src/style.scss
+++ b/public/src/style.scss
@@ -412,19 +412,18 @@ input {
     }
 }
 
-@media all and (min-width: 992px) {
-    .navbar .nav-item .dropdown-menu {
-        display: none;
-    }
 
-    .navbar .nav-item:hover .dropdown-menu {
+    .navbar  {
+        .nav-item {
+            &:hover .dropdown-menu {
         display: block;
     }
-
-    .navbar .nav-item .dropdown-menu {
+            .dropdown-menu {
+                display: none;
         margin-top: 0;
     }
 }
+    }
 
 @media only screen and (max-width: 980px) {
     .width-resize {
